# lean-runtime

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: hello.rs  nat_ops.rs
runtime/examples/: closures.rs  constructors.rs
runtime/src/: array.rs  bignat.rs  ctor.rs  debug.rs  external.rs  float.rs  floatarray.rs  io.rs  misc.rs  panic.rs  stref.rs  string.rs  uint.rs
src/: box.rs  closure.rs  int.rs  lib.rs  nat.rs  object.rs  owned.rs  platform.rs  rc.rs  sarray.rs  sint.rs  thunk.rs
vm/: Cargo.toml
vm/examples/: fib.rs  hello_vm.rs
vm/src/: bytecode.rs  lib.rs  linker.rs  main.rs  value.rs  vm.rs
vm/src/externs/: array.rs  convert.rs  float.rs  format.rs  int.rs  io.rs  list.rs  misc.rs  mod.rs  nat.rs  refs.rs  sint.rs  string.rs  system.rs  task.rs  thunk.rs  uint.rs
vm/tests/: array_loop_test.disasm  array_loop_test.lean  array_loop_test.leanbc  array_minimal.disasm  array_minimal.lean  array_minimal.leanbc  array_range_test.disasm  array_range_test.lean  array_range_test.leanbc  array_simple.disasm  array_simple.lean  array_simple.leanbc  array_size_test.disasm  array_size_test.lean  array_size_test.leanbc  array_test.disasm  array_test.lean  array_test.leanbc  array_threshold.disasm  array_threshold.lean  array_threshold.leanbc  collatz.disasm  collatz.lean  collatz.leanbc  countdown.disasm  countdown.lean  countdown.leanbc  counter.disasm  counter.lean  counter.leanbc  factorial_io.disasm  factorial_io.lean  factorial_io.leanbc  fib.disasm  fib.lean  fib.leanbc  fibonacci_io.disasm  fibonacci_io.lean  fibonacci_io.leanbc  fizzbuzz.disasm  (+92 more)
vm/tests/correctness/: arithmetic.disasm  arithmetic.lean  arithmetic.leanbc  closures.lean  functions.lean  inductives.lean  monads.lean  recursion.lean  run_differential_tests.sh
vm/tests/stress_tests/: std_stress.disasm  std_stress.lean  std_stress.leanbc  std_stress2.disasm  std_stress2.lean  std_stress2.leanbc
