[package]
name = "lean-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
# Enable runtime debug checks: pointer validation, use-after-free detection,
# bounds checking on ctor fields. Active by default in debug builds via
# cfg(debug_assertions). Use this feature to enable in release builds too.
runtime-debug = []

[dependencies]
libc = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

# Runtime-specific overrides
missing_safety_doc = "allow" # Unsafe is pervasive; documenting each is redundant
cast_possible_truncation = "allow" # We know our sizes
cast_sign_loss = "allow" # Intentional in low-level code
cast_possible_wrap = "allow" # Intentional in low-level code
ptr_as_ptr = "allow" # Common pattern in runtime code
not_unsafe_ptr_arg_deref = "allow" # Most functions take raw pointers

[lints.rust]
# Allow non-standard naming to match Lean conventions
non_snake_case = "allow"
non_camel_case_types = "allow"
# Unsafe is the norm in this crate
unsafe_op_in_unsafe_fn = "allow"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "nat_ops"
path = "examples/nat_ops.rs"

[[example]]
name = "constructors"
path = "examples/constructors.rs"

[[example]]
name = "closures"
path = "examples/closures.rs"
