[workspace]
members = ["runtime", "vm"]
resolver = "2"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"
