[package]
name = "lean4-vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM for Lean 4"

[dependencies]
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
lean-runtime = { path = "../runtime" }
num-traits = "0.2"
smallvec = "1.13"

[features]
default = []
trace = [] # Enable execution tracing

[lints]
workspace = true

[[bin]]
name = "lean4-vm"
path = "src/main.rs"

[lib]
name = "lean4_vm"
path = "src/lib.rs"

[[example]]
name = "hello_vm"
path = "examples/hello_vm.rs"

[[example]]
name = "fib"
path = "examples/fib.rs"
